--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,10 +1,8 @@
 name: Release
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,21 +18,24 @@ jobs:
         with:
           go-version: 1.21
 
-      - name: Build binary
+      - name: Build Spacecore plugin
         run: |
           go build -o ${{ env.SPACECORE_BINARY }}
 
-      - name: Upload release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.SPACECORE_BINARY }}
-          asset_name: ${{ env.SPACECORE_BINARY }}
-          asset_content_type: application/octet-stream
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Package Spacecore for linux
+        run: zip sc-linux-amd64.zip sc-linux-amd64/${{ env.SPACECORE_BINARY }}
 
-      - name: Upload binary
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.SPACECORE_BINARY }}
+      - name: Package Spacecore for mac
+        run: zip sc-darwin-arm64.zip sc-darwin-arm64/${{ env.SPACECORE_BINARY }}
 
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: sc-linux-amd64.zip
+          path: sc-linux-amd64.zip
+
+      - name: Upload Artifacts Mac
+        uses: actions/upload-artifact@v2
+        with:
+          name: sc-darwin-arm64.zip
+          path: sc-darwin-arm64.zip
